Exclude some more files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
 /target/
-.classpath
-.project
 .settings/
 src/main/resources/static/javadoc/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
